--- a/py_class_3.ipynb
+++ b/py_class_3.ipynb
@@ -1639,7 +1639,7 @@
         "colab": {}
       },
       "source": [
-        "for i in [1,2,3,4]:\n",
+        "for i in [1,2,3,4]\n",
         "    if i ==3:\n",
         "        print('three')\n",
         "    else:\n",
@@ -1748,7 +1748,7 @@
       "source": [
         "Q4 \n",
         "- How to concatenate list a & b? concatenate them and name it c\n",
-        "- now, multiple every item on the new list by 3\n"
+        "- now, multiple every item on the new list by 3, and put them on a list called d\n"
       ]
     },
     {
@@ -1773,38 +1773,10 @@
         "colab": {}
       },
       "source": [
-        "a+b"
+        "# Your code here"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ADxZ3wFyasNl",
-        "colab_type": "code",
-        "outputId": "4548d056-639d-4a90-ae5f-8ef5ac17e20f",
-        "colab": {}
-      },
-      "source": [
-        "for i in a+b:\n",
-        "    print(i*3)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3\n",
-            "6\n",
-            "9\n",
-            "12\n",
-            "15\n",
-            "18\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1816,7 +1788,7 @@
       },
       "source": [
         "import numpy as np\n",
-        "np.array(a+b)*3\n"
+        "# Your code here\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -1849,27 +1821,29 @@
       "metadata": {
         "id": "bblWiqBjasNt",
         "colab_type": "code",
-        "outputId": "ba784914-94dc-44dd-eb15-7d888ec18228",
-        "colab": {}
+        "outputId": "f139fa29-3962-4097-b5fd-426778663b68",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        }
       },
       "source": [
         "x = [1,2,3]\n",
-        "y = [4]\n",
+        "y = 4\n",
         "x +y"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1, 2, 3, 4]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 37
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-0cac11abaaf1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"int\") to list"
+          ]
         }
       ]
     },
@@ -1889,25 +1863,24 @@
         "scrolled": true,
         "id": "KwEXm-1BasNw",
         "colab_type": "code",
-        "outputId": "e60bf8e9-16ce-4613-a879-90c71f3dff18",
-        "colab": {}
+        "outputId": "7e917574-cdca-4e33-dd44-db0da12f9691",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        }
       },
       "source": [
-        "[a if a==3 else '_' for a in [1,2,3] ]"
+        "[a for a in [1,2,3] if a==3 else '_'  ]"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['_', '_', 3]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 39
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-d764de5b0002>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [a for a in [1,2,3] if a==3 else '_'  ]\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ]
     },
@@ -1926,20 +1899,23 @@
       "metadata": {
         "id": "or-BfdM4asNz",
         "colab_type": "code",
-        "outputId": "afb8e332-8e1c-488b-f452-0c4d28ac53c4",
-        "colab": {}
+        "outputId": "ff0e2e77-4900-45c7-fbba-a3fd7fd99113",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        }
       },
       "source": [
-        "[a  for a in [1,2,3] if a==3  ]"
+        "[a  if a==3 for a in [1,2,3]   ]"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-41-78bf3a31660a>, line 1)",
+          "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-78bf3a31660a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [a if a==3 for a in [1,2,3]   ]\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-551536c4ea25>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [a  if a==3 for a in [1,2,3]   ]\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ]
